﻿EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/06/2010==
Derision: SoD - Players may now be tracked and fixed a bug where tracking would not work when switching tracking targets without cancelling tracking.
Derision: SoD - Initial work on /hidecorpse serverside support. All but /hidecorpse looted should work.

==04/05/2010==
Derision: SoD - Loot All now works.

==04/04/2010==
Derision: SoD - Group member (client or bot) mana and endurance should update correctly in the group window.
Derision: SoD - Altered SpawnStruct encode to send colors for all playable races (including corpses and NPCs).
Derision: SoD - Group Main Assist may be assigned via the Group Window. As the group leader cannot explicitly assign it to himself, use /grouproles set <leadername> 2
Leere:	A moving mob that becomes mezzed will no longer appear to continue moving.
Fourier: Added location to the output of #listnpc.

==04/03/2010==
Trevius: SoF/SoD - Total Spent AA Points now show correctly for these 2 clients.
Trevius: Froglok characters now default to size 5 instead of 7.  This corrects size issues when using illusions.
Derision: SoD - Bazaar Trader Mode/Bazaar Search should now work correctly.
Derision: SoD - Found the helm field in the spawn struct.
Derision: SoD - Implemented new packets for sending the list of findable NPCs to the client.
Derision: SoD - Flymode and Titles in the spawn struct.

==04/02/2010==
Derision: SoD - Group Leadership AA should mostly work (Main Assist is no longer a GLAA and Health Awareness seems intermittent).
joligario: Pet behavious change.
Trevius: SoF/SoD - Added clicky item checks to match previous clients. All clicky item hacker entries should now be actual hack attempts.
Trevius: Added an extra hacker check for clicking a must equip effect without having it equipped.